sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:3: error: not found: value getNombreValeur
  var a=getNombreValeur()
        ^AlgCombSort:14: error: not found: value estPlusPetit
    if(!estPlusPetit(i,i+ecart)){
        ^